[package]
name = "htpasswd-verify"
version = "0.1.0"
authors = ["aQaTL <mmsoltys@outlook.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "bin" ]

[dependencies]
base64 = "0.11"
bcrypt = "0.6"
rust-crypto = "0.2"
pwhash = "0.3"
