[package]
name = "htpasswd-verify"
version = "0.2.0"
authors = ["aQaTL <mmsoltys@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Verify hashes stored in apache's htpasswd file"
repository = "https://github.com/aQaTL/htpasswd-verify"
keywords = ["apache", "password", "htpasswd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "bin" ]

[dependencies]
base64 = "0.11"
bcrypt = "0.10.1"
rust-crypto = "0.2"
pwhash = "0.3"
