[package]
name = "htpasswd-verify"
version = "0.3.0"
authors = ["aQaTL <mmsoltys@outlook.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Verify hashes stored in apache's htpasswd file"
repository = "https://github.com/aQaTL/htpasswd-verify"
keywords = ["apache", "password", "htpasswd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "bin" ]

[dependencies]
base64 = "0.21"
bcrypt = "0.15"
md-5 = "0.10"
pwhash = "1"
sha1 = "0.10"
